# oligo-designer-toolsuite-AI-filters

./: .gitignore  Manifest.in  README.md  dataset.sbatch  lstm.sbatch  mlp.sbatch  pyproject.toml  rnn.sbatch
.github/workflows/: release.yml
configs/hybridization_probability/: generate_artificial_dataset.yaml  generate_real_dataset_blastn.yaml  generate_real_dataset_bowtie.yaml  train_LSTM.yaml  train_MLP.yaml  train_RNN.yaml
data/hybridization_probablity/: prova
data/pretrained_models/: hybridization_probability.pt
odt_ai_filters/: _version.py
odt_ai_filters.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
odt_ai_filters/_api/: _api_hybridization_probability.py
odt_ai_filters/_hybridization_probability/: __init__.py  generate_artificial_dataset.py
odt_ai_filters/_hybridization_probability.py/: _dataset.py  _models.py  generate_artificial_dataset.py  train_model.py
odt_ai_filters/api/: __init__.py  _api_hybridization_probability.py  _utils.py
odt_ai_filters/hybridization_probability/: __init__.py  _dataset.py  generate_artificial_dataset.py  train_model.py
oligo_designer_toolsuite_ai_filters/: __init__.py  _version.py
oligo_designer_toolsuite_ai_filters.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oligo_designer_toolsuite_ai_filters/api/: __init__.py  _api_base.py  _api_hybridization_probability.py
oligo_designer_toolsuite_ai_filters/hybridization_probability/: _dataset.py  _models.py  generate_artificial_dataset.py  generate_real_dataset.py  train_model.py
scripts/: dataset.sbatch  mlp.sbatch
