[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["oligo_designer_toolsuite_ai_filters"]

[tool.setuptools.dynamic]
#version = {attr = "my_package.VERSION"}
readme = { file = "README.md" }

[tool.setuptools_scm]
write_to = "oligo_designer_toolsuite_ai_filters/_version.py"

[project]
name = "oligo-designer-toolsuite-ai-filters"
dynamic = ["version"]
#version = "1.0.2"
authors = [
  { name = "Lisa Barros de Andrade e Sousa", email = "lisa.barros.andrade.sousa@gmail.com" },
  { name = "Isra Mekki", email = "isra.mekki@helmholtz-muenchen.de" },
  { name = "Louis Kümmerle" },
  { name = "Francesco Campi" },
  { name = "Chelsea Bright" },
]
maintainers = [
  { name = "Lisa Barros de Andrade e Sousa", email = "lisa.barros.andrade.sousa@gmail.com" },
  { name = "Isra Mekki", email = "isra.mekki@helmholtz-muenchen.de" },
]
description = "Develop custom oligo design pipelines."
keywords = [
  "bioinformatics",
  "probes",
  "oligo nucleotides",
  "probe design",
  "oligo design",
]
readme = "README.md"
requires-python = "<3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "oligo-designer-toolsuite",
    "seaborn",

]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
train = "oligo_designer_toolsuite.pipelines._scrinshot_probe_designer:main"
merfish_probe_designer = "oligo_designer_toolsuite.pipelines._merfish_probe_designer:main"


[project.urls]
documentation = "https://oligo-designer-toolsuite.readthedocs.io/"
repository = "https://github.com/HelmholtzAI-Consultants-Munich/oligo-designer-toolsuite"
