[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["oligo_designer_toolsuite_ai_filters"]

[tool.setuptools.dynamic]
readme = { file = "README.md" }

[tool.setuptools_scm]
write_to = "oligo_designer_toolsuite_ai_filters/_version.py"

[project]
name = "oligo-designer-toolsuite-ai-filters"
dynamic = ["version"]
# version = "0.0.1"
authors = [
  { name = "Francesco Campi", email = "francesco.campi@helmholtz-munich.de" },
  { name = "Lisa Barros de Andrade e Sousa", email = "lisa.barros.andrade.sousa@gmail.com" },
]
maintainers = [
  { name = "Francesco Campi", email = "francesco.campi@helmholtz-munich.de" },
]
description = "AI plug-ins for the Oligo Designer Toolsuite package"
keywords = [
  "bioinformatics",
  "probes",
  "oligo nucleotides",
  "probe design",
  "oligo design",
]
readme = "README.md"
requires-python = "<3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "oligo-designer-toolsuite",
    "seaborn",
]


[project.scripts]



[project.urls]
documentation = "https://oligo-designer-toolsuite.readthedocs.io/"
repository = "https://github.com/HelmholtzAI-Consultants-Munich/oligo-designer-toolsuite"
